# LoraGatewayDevelopment

./: .cland  .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md  SPI_Stub.ioc  autoscript.sh  sdkconfig  sdkconfig.old  test_v2.py
.github/workflow/: unit_test_workflow.yml
.github/workflows/: coordinator_workflow.yml  experiment_debug_workflow.yml  main_workflow.yml  node.js.yml  stub.yml  test.yml  unit_test_workflow.yml
GD20_Inverter/: .cproject  .gitignore
SPI_Stub/: .cproject  .gitignore  .project  SPI_Stub.ioc  STM32_Slave Debug.launch
SPI_Stub/Debug/: STM32_Slave.elf  STM32_Slave.list  STM32_Slave.map  makefile
SPI_Stub/User/: Chuongtrinhchinh.c
User/: Chuongtrinhchinh.h
code/Lora_Gateway/: CMakeLists.txt  sdkconfig
code/Lora_node_RS485/: CMakeLists.txt  sdkconfig
code/unit-test/unit-test_mqtts_cloud_vps_broker/components/network/: CMakeLists.txt
code/unit-test/unit-test_mqtts_cloud_vps_broker/components/network/eth_w5500_app/: eth_w5500_app.c
code/unit-test/unit-test_mqtts_cloud_vps_broker/components/network/eth_w5500_app/include/: eth_w5500_app.h
code/unit-test/unit-test_mqtts_cloud_vps_broker/components/network/mqtts/: mqtts_app.c
code/unit-test/unit-test_mqtts_cloud_vps_broker/components/network/mqtts/certificates/: client.crt  client.key
code/unit-test/unit-test_mqtts_cloud_vps_broker/components/network/mqtts/include/: mqtts_app.h
code/unit-test/unit-test_mqtts_cloud_vps_broker/components/network/wifi_app/include/: wifi_app.h
hardware/: .gitignore
main/: CMakeLists.txt  Chuongtrinhchinh.c  serial_master.c
(+685 files in other folders)
